[gd_scene load_steps=17 format=3 uid="uid://hsr2iv3c6g64"]

[ext_resource type="Script" path="res://main-menu/shop_selection.gd" id="1_0ulxv"]
[ext_resource type="PackedScene" uid="uid://wmiwgf778der" path="res://main-menu/slot.tscn" id="1_fykkm"]
[ext_resource type="Texture2D" uid="uid://c1tf5xvc0wlgi" path="res://assets/skins/character.png" id="2_7l4gf"]
[ext_resource type="Texture2D" uid="uid://bsjxm8pflp8ce" path="res://assets/skins/red.png" id="3_5vihs"]
[ext_resource type="Texture2D" uid="uid://dx30hlwp278bj" path="res://assets/skins/green.png" id="5_d7wbe"]
[ext_resource type="Texture2D" uid="uid://cmfakq4frgstt" path="res://assets/skins/yellow.png" id="6_316ue"]
[ext_resource type="Texture2D" uid="uid://c0r5762xk2ejk" path="res://assets/skins/pink.png" id="7_mmdgw"]
[ext_resource type="Texture2D" uid="uid://d08gfgxydpyc8" path="res://assets/skins/dino.png" id="8_iq5k5"]
[ext_resource type="Texture2D" uid="uid://dieucui0ixeoq" path="res://assets/skins/black.png" id="9_1m4po"]
[ext_resource type="Texture2D" uid="uid://dhcsyklmgc7vw" path="res://assets/skins/reward.png" id="10_jnjcq"]
[ext_resource type="Texture2D" uid="uid://dubfgjmgbsmgw" path="res://assets/skins/skin-frame.png" id="11_sunrv"]
[ext_resource type="Texture2D" uid="uid://f68xcnilhq47" path="res://assets/skins/background.png" id="12_cddnc"]
[ext_resource type="Texture2D" uid="uid://s5shgkv2vs43" path="res://assets/buttons/equip.png" id="13_7tlru"]
[ext_resource type="Texture2D" uid="uid://clpix5x1romh3" path="res://assets/buttons/buy.png" id="13_tuqyi"]
[ext_resource type="Texture2D" uid="uid://dty1aww7qgakx" path="res://assets/buttons/back.png" id="15_qvhjc"]
[ext_resource type="Texture2D" uid="uid://cugvh1jqn8dng" path="res://assets/buttons/back-pressed.png" id="16_gteq8"]

[node name="ShopSelection" type="Node2D"]
script = ExtResource("1_0ulxv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 199.0
offset_top = 191.0
offset_right = 239.0
offset_bottom = 231.0
scale = Vector2(2, 2)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Slot" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_fykkm")]
isOwned = true
image = ExtResource("2_7l4gf")

[node name="Slot2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_fykkm")]
position = Vector2(68.5, 0)
id = 1
isOwned = true
image = ExtResource("3_5vihs")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Slot3" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("1_fykkm")]
position = Vector2(0, 63)
id = 2
image = ExtResource("5_d7wbe")

[node name="Slot4" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("1_fykkm")]
position = Vector2(68.5, 63)
id = 3
image = ExtResource("6_316ue")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Slot5" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("1_fykkm")]
position = Vector2(0, 126.5)
id = 4
image = ExtResource("7_mmdgw")

[node name="Slot6" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("1_fykkm")]
position = Vector2(68.5, 126.5)
id = 5
image = ExtResource("8_iq5k5")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Slot7" parent="VBoxContainer/HBoxContainer4" instance=ExtResource("1_fykkm")]
position = Vector2(0, 190)
id = 6
image = ExtResource("9_1m4po")

[node name="Slot8" parent="VBoxContainer/HBoxContainer4" instance=ExtResource("1_fykkm")]
position = Vector2(68.5, 190)
id = 7
image = ExtResource("10_jnjcq")

[node name="Selection" type="Sprite2D" parent="."]
position = Vector2(747, 326)
scale = Vector2(5, 5)
texture = ExtResource("11_sunrv")

[node name="Background" type="Sprite2D" parent="Selection"]
position = Vector2(0, -0.200008)
scale = Vector2(1.3, 1.8625)
texture = ExtResource("12_cddnc")

[node name="Skin" type="Sprite2D" parent="Selection"]

[node name="Equip" type="TextureButton" parent="."]
offset_left = -876.0
offset_top = 443.0
offset_right = -755.0
offset_bottom = 489.0
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("13_7tlru")

[node name="Buy" type="TextureButton" parent="."]
offset_left = -883.0
offset_top = 281.0
offset_right = -762.0
offset_bottom = 327.0
scale = Vector2(2.5, 2.5)
texture_normal = ExtResource("13_tuqyi")

[node name="ButtonSpot" type="Marker2D" parent="."]
position = Vector2(595, 553)

[node name="HiddenSpot" type="Marker2D" parent="."]
position = Vector2(-1276, 520)

[node name="Back" type="TextureButton" parent="."]
offset_left = 968.0
offset_top = 238.0
offset_right = 1089.0
offset_bottom = 284.0
texture_normal = ExtResource("15_qvhjc")
texture_pressed = ExtResource("16_gteq8")

[connection signal="pressed" from="Equip" to="." method="_on_equip_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
